[gd_scene load_steps=2 format=3 uid="uid://7cx5tjcb0hbu"]

[ext_resource type="Script" uid="uid://b3lylhqlns23y" path="res://Scripts/UI/InventoryHUD.gd" id="1_ipg4v"]

[node name="InventoryHud" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ipg4v")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10

[node name="MainContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="WeaponRow" type="HBoxContainer" parent="MarginContainer/MainContainer"]
layout_mode = 2

[node name="Panel1" type="Panel" parent="MarginContainer/MainContainer/WeaponRow"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2

[node name="Icon" type="TextureRect" parent="MarginContainer/MainContainer/WeaponRow/Panel1"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="Panel2" type="Panel" parent="MarginContainer/MainContainer/WeaponRow"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2

[node name="Icon" type="TextureRect" parent="MarginContainer/MainContainer/WeaponRow/Panel2"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="Panel3" type="Panel" parent="MarginContainer/MainContainer/WeaponRow"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2

[node name="Icon" type="TextureRect" parent="MarginContainer/MainContainer/WeaponRow/Panel3"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="Panel4" type="Panel" parent="MarginContainer/MainContainer/WeaponRow"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2

[node name="Icon" type="TextureRect" parent="MarginContainer/MainContainer/WeaponRow/Panel4"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="Panel5" type="Panel" parent="MarginContainer/MainContainer/WeaponRow"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2

[node name="Icon" type="TextureRect" parent="MarginContainer/MainContainer/WeaponRow/Panel5"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="AccessoryRow" type="HBoxContainer" parent="MarginContainer/MainContainer"]
layout_mode = 2

[node name="Panel1" type="Panel" parent="MarginContainer/MainContainer/AccessoryRow"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2

[node name="Icon" type="TextureRect" parent="MarginContainer/MainContainer/AccessoryRow/Panel1"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="Panel2" type="Panel" parent="MarginContainer/MainContainer/AccessoryRow"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2

[node name="Icon" type="TextureRect" parent="MarginContainer/MainContainer/AccessoryRow/Panel2"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="Panel3" type="Panel" parent="MarginContainer/MainContainer/AccessoryRow"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2

[node name="Icon" type="TextureRect" parent="MarginContainer/MainContainer/AccessoryRow/Panel3"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="Panel4" type="Panel" parent="MarginContainer/MainContainer/AccessoryRow"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2

[node name="Icon" type="TextureRect" parent="MarginContainer/MainContainer/AccessoryRow/Panel4"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="Panel5" type="Panel" parent="MarginContainer/MainContainer/AccessoryRow"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2

[node name="Icon" type="TextureRect" parent="MarginContainer/MainContainer/AccessoryRow/Panel5"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5
